tests/miniJava/neg/000259_mutation.MiniJava
class java { public static void Main class String [ ] java ) { { } } }
